--- a/render.yaml
+++ b/render.yaml
@@ -10,4 +10,4 @@ services:
       - key: RTMP_URL
         value: rtmps://live-api-s.facebook.com:443/rtmp/FB-744405664771622-0-Ab09qkJ-62nytCGG2NyDIwSl
       - key: PORT
-        value: 10000
+        value: "10000"
