--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "fake-live-facebook",
   "version": "1.0.0",
-  "description": "Envia vídeo como live para Facebook com automação do título e descrição",
+  "description": "Envia vídeo como live para o Facebook com título e descrição",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "",
-    "multer": "",
-    "puppeteer": ""
+    "express": "*",
+    "multer": "*",
+    "puppeteer": "*"
   }
 }
