--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "fake-live-facebook",
+  "name": "facebook-live-from-video",
   "version": "1.0.0",
-  "description": "Envia vídeo como live para o Facebook com título e descrição",
+  "description": "Transmite vídeo gravado como live no Facebook via FFmpeg + Puppeteer",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "*",
-    "multer": "*",
-    "puppeteer": "*"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "puppeteer": "^21.6.0"
   }
 }
