--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "facebook-live-from-video",
+  "name": "live-fb-render",
   "version": "1.0.0",
-  "description": "Transmite vídeo gravado como live no Facebook via FFmpeg + Puppeteer",
-  "main": "server.js",
+  "description": "Transmite vídeo pré-gravado como live no Facebook via Render + FFmpeg + Puppeteer",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "puppeteer": "^21.6.0"
+    "express": "^4.19.2",
+    "multer": "^2.0.2",
+    "puppeteer": "^22.8.2",
+    "fluent-ffmpeg": "^2.1.2",
+    "uuid": "^9.0.1"
   }
 }
