--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.2",
     "puppeteer": "^22.8.2",
     "fluent-ffmpeg": "^2.1.2",
     "uuid": "^9.0.1"
