--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "multer": "^1.4.5-lts.2",
-    "puppeteer": "^22.8.2",
-    "fluent-ffmpeg": "^2.1.2",
-    "uuid": "^9.0.1"
+  "cors": "^2.8.5",
+  "express": "^4.19.2",
+  "multer": "^1.4.5-lts.2",
+  "puppeteer": "^22.8.2",
+  "fluent-ffmpeg": "^2.1.2",
+  "uuid": "^9.0.1"
+
   }
 }
